--- a/yajudge_client/web/index.html
+++ b/yajudge_client/web/index.html
@@ -15,7 +15,7 @@
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
-  <meta name="description" content="A new Flutter project.">
+  <meta name="description" content="Yet Another Judge">
 
   <!-- iOS meta tags & icons -->
   <meta name="apple-mobile-web-app-capable" content="yes">
@@ -24,7 +24,7 @@
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
   <title>Yet Another Judge</title>
-  <link rel="manifest" href="manifest.json">
+<!--  <link rel="manifest" href="manifest.json">-->
 </head>
 <body>
   <!-- This script installs service_worker.js to provide PWA functionality to
