--- a/yajudge_client/web/index.html
+++ b/yajudge_client/web/index.html
@@ -24,6 +24,27 @@
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
   <title>Yet Another Judge</title>
+
+  <style type="text/css">
+    body {
+      background-color: #ddd;
+      color: red;
+      font-family: sans-serif;
+      font-size: 14px;
+    }
+    #loading {
+      display: block;
+      width: 200px;
+      height: 220px;
+      margin-left: auto;
+      margin-right: auto;
+    }
+    #loading-block {
+      position: absolute;
+      top: 35%;
+    }
+  </style>
+
 <!--  <link rel="manifest" href="manifest.json">-->
 </head>
 <body>
@@ -96,7 +117,10 @@
   </script>
 
   <div id="loading">
-    <p>Загружается...</p>
+    <div id="loading-block">
+      <p align="center"><img src="./icons/Icon-64.png" width="64" height="64"/></p>
+      <p align="center">Загружается...</p>
+    </div>
   </div>
   <a href="" id="file-download-anchor"></a>
 </body>
